# ckb-vm-rust-demo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
rust-contract/: Cargo.toml
rust-contract/src/: lib.rs  simple_alloc.rs
src/: main.rs
