[package]
name = "rust-contract"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

